# choreonoid_plugins

./: .gitignore  CMakeLists.txt  package.xml
config/: trampoline.yaml
controllers/: ControllerBase.cpp  ControllerBase.h  JumpController.cpp  JumpController.h  PDController.cpp  PDController_InvertedPendulum.cpp  SpringFootController.cpp  optimize_inverted_pendulum.cpp  optimize_inverted_pendulum.h
launch/: run_chorenoid.sh  run_choreonoid.sh
lua/: CloneItemPlugin.lua
models/: CHIDORImain_springfoot.wrl.in  InvertedPendulum.body  LLEG_SPRING_FOOT.wrl  ParticleTrampolineSpringModel.body  RLEG_SPRING_FOOT.wrl  TrampolineSpringModel.body  big_floor.body
plugins/: CloneItemPlugin.cpp  OptimizeGainPlugin.cpp  ResetSimulationPlugin.cpp  ResetSimulationPlugin.h
shm_test/: Makefile  publisher.cpp  subscriber.cpp
src/: PDController.cpp  PDController.h  TrampolineCustomizer.cpp  tutorial.cpp
util/: CnoidBody.h  Interpolator.cpp  Interpolator.h  Kinematics.cpp  Kinematics.h  util.h
world/: CHIDORIFloor.cnoid.in  InvertedPendulum.cnoid  InvertedPendulum.cnoid.in  JAXONFloor.cnoid.in  JAXONTrampoline.cnoid.in  SampleRobotTrampoline.cnoid.in  TrampolineSpringModel.cnoid
