<package>
  <name>choreonoid_plugins</name>
  <version>0.0.0</version>
  <description>
    choreonoid plugins for humanoid controller
  </description>

  <license>TODO</license>
  <maintainer email="ishikawa@jsk.imi.i.u-tokyo.ac.jp">Tatsuya Ishikawa</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>yaml-cpp</build_depend>

  <!-- <run_depend>roscpp</run_depend> -->
  <export>
  </export>
</package>
